# sendgrid-webhook-starter

./: LICENSE  README.md  pyproject.toml
src/api/: main.py
src/configs/: config.py  kafka_client.properties
src/helpers/: kafka_client.py  sendgrid_event.py
